tests/src/snapshots/fe_compiler_tests__analysis__case_062_return_identity_u128.snap
---
source: tests/src/analysis.rs
expression: "build_snapshot(fixture, &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [
                            (
                                "x",
                                Base(
                                    Numeric(
                                        U128,
                                    ),
                                ),
                            ),
                        ],
                        return_type: Base(
                            Numeric(
                                U128,
                            ),
                        ),
                    },
                ],
            },
        ),
    },
}

note: 
  ┌─ features/return_identity_u128.fe:3:16
  │
3 │         return x
  │                ^ attributes hash: 9341420026351674595
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U128,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_identity_u128.fe:2:5
  │  
2 │ ╭     pub def bar(x: u128) -> u128:
3 │ │         return x
  │ ╰────────────────^ attributes hash: 10497307355197417484
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [
            (
                "x",
                Base(
                    Numeric(
                        U128,
                    ),
                ),
            ),
        ],
        return_type: Base(
            Numeric(
                U128,
            ),
        ),
    }

note: 
  ┌─ features/return_identity_u128.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub def bar(x: u128) -> u128:
3 │ │         return x
  │ ╰────────────────^ attributes hash: 7109346401769907528
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [
                    (
                        "x",
                        Base(
                            Numeric(
                                U128,
                            ),
                        ),
                    ),
                ],
                return_type: Base(
                    Numeric(
                        U128,
                    ),
                ),
            },
        ],
        init_function: None,
        events: [],
        structs: [],
        external_contracts: [],
        created_contracts: {},
    }

note: 
  ┌─ features/return_identity_u128.fe:2:20
  │
2 │     pub def bar(x: u128) -> u128:
  │                    ^^^^ attributes hash: 14909107886776088983
  │
  = Base(
        Numeric(
            U128,
        ),
    )

note: 
  ┌─ features/return_identity_u128.fe:2:29
  │
2 │     pub def bar(x: u128) -> u128:
  │                             ^^^^ attributes hash: 14909107886776088983
  │
  = Base(
        Numeric(
            U128,
        ),
    )


