tests/src/snapshots/fe_compiler_tests__analysis__case_064_return_lt_i256.snap
---
source: tests/src/analysis.rs
expression: "build_snapshot(fixture, &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [
                            (
                                "x",
                                Base(
                                    Numeric(
                                        I256,
                                    ),
                                ),
                            ),
                            (
                                "y",
                                Base(
                                    Numeric(
                                        I256,
                                    ),
                                ),
                            ),
                        ],
                        return_type: Base(
                            Bool,
                        ),
                    },
                ],
            },
        ),
    },
    tuples_used: {},
}

note: 
  ┌─ features/return_lt_i256.fe:3:16
  │
3 │         return x < y
  │                ^ attributes hash: 17351186385905986417
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                I256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_lt_i256.fe:3:20
  │
3 │         return x < y
  │                    ^ attributes hash: 17351186385905986417
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                I256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_lt_i256.fe:3:16
  │
3 │         return x < y
  │                ^^^^^ attributes hash: 10866140763116710699
  │
  = ExpressionAttributes {
        typ: Base(
            Bool,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_lt_i256.fe:2:5
  │  
2 │ ╭     pub def bar(x: i256, y: i256) -> bool:
3 │ │         return x < y
  │ ╰────────────────────^ attributes hash: 6364036098623316317
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [
            (
                "x",
                Base(
                    Numeric(
                        I256,
                    ),
                ),
            ),
            (
                "y",
                Base(
                    Numeric(
                        I256,
                    ),
                ),
            ),
        ],
        return_type: Base(
            Bool,
        ),
    }

note: 
  ┌─ features/return_lt_i256.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub def bar(x: i256, y: i256) -> bool:
3 │ │         return x < y
  │ ╰────────────────────^ attributes hash: 6381902717997920635
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [
                    (
                        "x",
                        Base(
                            Numeric(
                                I256,
                            ),
                        ),
                    ),
                    (
                        "y",
                        Base(
                            Numeric(
                                I256,
                            ),
                        ),
                    ),
                ],
                return_type: Base(
                    Bool,
                ),
            },
        ],
        init_function: None,
        events: [],
        list_expressions: {},
        string_literals: {},
        structs: [],
        external_contracts: [],
        created_contracts: {},
    }

note: 
  ┌─ features/return_lt_i256.fe:2:20
  │
2 │     pub def bar(x: i256, y: i256) -> bool:
  │                    ^^^^ attributes hash: 5923332062417896707
  │
  = Base(
        Numeric(
            I256,
        ),
    )

note: 
  ┌─ features/return_lt_i256.fe:2:29
  │
2 │     pub def bar(x: i256, y: i256) -> bool:
  │                             ^^^^ attributes hash: 5923332062417896707
  │
  = Base(
        Numeric(
            I256,
        ),
    )

note: 
  ┌─ features/return_lt_i256.fe:2:38
  │
2 │     pub def bar(x: i256, y: i256) -> bool:
  │                                      ^^^^ attributes hash: 8311861578736502650
  │
  = Base(
        Bool,
    )


